# PoC

./: .gitignore  Dockerfile  README.md
backend/: app.py  pyproject.toml
backend/data/: device_esempio.json  device_example.json
backend/data/decision_trees/: ACM-1-1.json  AUM-5-1.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: EvaluationPage.jsx  LandingPage.jsx  ResultsPage.jsx
